miniextendr-macros/tests/ui/derive_dataframe_enum_nested_enum_as_factor_as_list_conflict.rs
//! Test: as_factor + as_list conflict → compile error.

use miniextendr_macros::DataFrameRow;

#[derive(Clone, Debug)]
enum Dir {
    N,
    S,
}

#[derive(DataFrameRow)]
#[dataframe(tag = "_type")]
enum Outer {
    Ev {
        #[dataframe(as_factor, as_list)]
        dir: Dir,
    },
    Other,
}

fn main() {}
